# BandoFit

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/clients/: anthropic_ai.py  openapi.py  revolut.py  supabase.py
backend/app/core/: config.py  errors.py  net.py  security.py
backend/app/schemas/: addon.py  ai_check.py  alerts.py  bando.py  billing.py  calendar.py  common.py  company.py  consulting.py  entitlement.py  family.py  job_position.py  notification.py  openapi_data.py  payment.py  plan.py  preferences.py  saved_bando.py  user.py
backend/app/services/: addon_inventory_service.py  addon_service.py  admin_payment_service.py  ai_check_prompts.py  ai_check_scoring.py  ai_check_service.py  alert_scheduler.py  auth_service.py  bandi_service.py  bando_alert_service.py  billing_service.py  calendar_service.py  codice_fiscale.py  company_pdf_service.py  company_scope.py  company_service.py  compatibility.py  consulting_service.py  document_service.py  email_service.py  entitlement_service.py  family_service.py  fattura_builder.py  invoice_service.py  job_position_service.py  link_policy.py  lookup_service.py  notification_service.py  openapi_mapping.py  openapi_service.py  payment_scheduler.py  payment_service.py  pdf_service.py  plan_service.py  preferences_service.py  pricing.py  rate_limit_service.py  saved_bandi_service.py  subscription_mgmt_service.py  telefono.py  (+2 more)
backend/tests/: test_active_company.py  test_addon_inventory_service.py  test_addon_service.py  test_admin_payments.py  test_ai_check_pipeline.py  test_ai_check_scoring.py  test_ai_check_service.py  test_alert_scheduler.py  test_alerts_endpoints.py  test_auth_confirm.py  test_auth_rate_limit.py  test_auth_register_neutro.py  test_auth_service.py  test_bandi_filters.py  test_bando_alert_service.py  test_billing_service.py  test_calendar_service.py  test_cf.py  test_client_ip.py  test_company_management.py  test_company_pdf.py  test_company_service.py  test_compatibility.py  test_config.py  test_consulting_service.py  test_deps_roles.py  test_document_service.py  test_email_digest.py  test_entitlement_service.py  test_family_service.py  test_invoice_service.py  test_link_policy.py  test_notification_service.py  test_openapi_client.py  test_openapi_mapping.py  test_openapi_service.py  test_payment_scheduler.py  test_payment_service.py  test_pdf_service.py  test_plan_schemas.py  (+11 more)
backend/tests/db/: conftest.py  test_migration_0005.py  test_migration_0006.py  test_migration_0007.py  test_migration_0008.py  test_migration_0009.py  test_migration_0010.py  test_migration_0012.py  test_migration_0013.py  test_migration_0014.py  test_migration_0015.py  test_migration_0016.py  (+16 more)
docs/: api.md  (+7 more)
(+238 files in other folders)
