[project]
name = "bandofit-backend"
version = "0.1.0"
description = "Backend API di BandoFit (FastAPI + Supabase)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "supabase>=2.15,<3",
    # postgrest è importato direttamente (APIError, query builder nei test):
    # va dichiarato esplicitamente e non solo come dipendenza transitiva di supabase.
    "postgrest>=0.16",
    "PyJWT[crypto]>=2.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    # test delle migration su un Postgres locale usa-e-getta
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
