[project]
name = "bandofit-backend"
version = "0.1.0"
description = "Backend API di BandoFit (FastAPI + Supabase)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "supabase>=2.15,<3",
    # postgrest è importato direttamente (APIError, query builder nei test):
    # va dichiarato esplicitamente e non solo come dipendenza transitiva di supabase.
    "postgrest>=0.16",
    "PyJWT[crypto]>=2.9",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    # invio email via SMTP (es. OVH), alternativa a Resend
    "aiosmtplib>=3.0",
    # database IANA dei fusi orari per zoneinfo (le immagini slim non hanno
    # /usr/share/zoneinfo): serve per calcolare "oggi" su Europe/Rome
    "tzdata>=2024.1",
    # AI-check: chiamate all'API Anthropic con output strutturato (messages.parse)
    "anthropic>=0.116",
    # Export PDF (scheda azienda + dossier). WeasyPrint = motore principale
    # (HTML+CSS → PDF via Jinja2); richiede pango/cairo/gdk-pixbuf nell'immagine
    # (vedi Dockerfile). ReportLab = fallback pure-Python senza librerie di
    # sistema. Jinja2 (autoescape) genera l'HTML per WeasyPrint.
    "weasyprint>=62",
    "reportlab>=4.2",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    # test delle migration su un Postgres locale usa-e-getta
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
